Updated media queries for text at smaller resolutions to fix card elements and improve legibility.
Wrote new queries to sort out the icon tray.

Fixed broken links

Improved text structure across multiple pages.

Tested.

--- a/main.css
+++ b/main.css
@@ -509,14 +509,22 @@ a, i {
           align-items: center;
 }
 
+@media only screen and (max-width: 600px) {
+  .icon__stack {
+    display: none;
+  }
+}
+
 .icon__stack--description {
-  margin-right: auto;
+  margin-left: auto;
 }
 
 .icon__stack__images {
+  margin-left: 5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-right: auto;
 }
 
 .icon__stack__images--image {
@@ -528,7 +536,7 @@ a, i {
 }
 
 .icon__stack__images--image:not(:last-child) {
-  margin-right: -1.5rem;
+  margin-right: -0.5rem;
 }
 
 .skill {
@@ -856,6 +864,11 @@ div.img-area {
   }
 }
 
+.scs__header {
+  font-weight: 600;
+  border-bottom: var(--line);
+}
+
 img {
   height: auto;
   max-width: 100%;
@@ -982,11 +995,17 @@ img {
   text-align: center;
   color: var(--colorgrey-dark-1);
   font-size: 2.5rem;
-  font-weight: 400;
+  font-weight: 600;
   letter-spacing: 2px;
   text-transform: uppercase;
   padding: .5rem;
   border-bottom: var(--line);
+}
+
+@media only screen and (max-width: 1200px) {
+  .card__title {
+    font-size: 2rem;
+  }
 }
 
 .card__text {
@@ -995,9 +1014,15 @@ img {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
-  font-size: 1.2rem;
+  font-size: 1.6rem;
   font-weight: 300;
   line-height: 1.5;
   border-bottom: var(--line);
+}
+
+@media only screen and (max-width: 900px) {
+  .card__text {
+    font-size: 1.6rem;
+  }
 }
 /*# sourceMappingURL=main.css.map */
