--- a/sass/_card.scss
+++ b/sass/_card.scss
@@ -91,22 +91,29 @@ img {
     text-align: center;
     color: var(--colorgrey-dark-1);
     font-size: 2.5rem;
-    font-weight: 400;
+    font-weight: 600;
     letter-spacing: 2px;
     text-transform: uppercase;
     padding: .5rem;
     border-bottom: var(--line);
+    @media only screen and (max-width: 1200px){
+      font-size: 2rem;
+    }
   }
   
   .card__text {
     padding: 1rem;
     margin-bottom: 2rem;
     flex: 1 1 auto;
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     font-weight: 300;
     line-height: 1.5;
 
     border-bottom: var(--line);
+
+    @media only screen and (max-width: 900px){
+      font-size: 1.6rem;
+    }
   }
   
   
